package com.projectsolution.hierarchicalstruct;

/**
 * interface
 */
public interface TextEdit {
    /**
     * method on edit
     */
    void onEdit();
}
